--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 buildscript {
+    repositories {
+        google()
+    }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
+        def nav_version = "2.4.0-alpha02"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
