--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsUp"
+        android:name=".MyCustomApp"
         tools:targetApi="31">
         <activity
             android:name=".EventDetailsActivity"
@@ -19,7 +20,7 @@
 
         <service
             android:name=".system.services.MyFirebaseMessagingService"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -51,6 +52,7 @@
         <activity
             android:name=".ui.chat.ChatActivity"
             android:exported="false" />
+
     </application>
 
 </manifest>
