--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Mar 25 23:03:14 IST 2023
-sdk.dir=C\:\\Users\\shivi\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\arya\\AppData\\Local\\Android\\Sdk
