--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 25 23:03:14 IST 2023
-sdk.dir=C\:\\Users\\aryam\\AppData\\Local\\Android\\Sdk
+#Sun May 07 08:33:05 IST 2023
+sdk.dir=C\:\\Users\\ashwi\\AppData\\Local\\Android\\Sdk
